# zense-rs

./: Cargo.toml  LICENSE.txt  README.md
zense-applications/: Cargo.toml
zense-applications/src/: camera-params.rs  getserial-reset-onfail.rs  open-close.rs  serialnumber.rs
zense-publisher-rs/: Cargo.toml
zense-publisher-rs/src/: main.rs
zenseapi/: Cargo.toml
zenseapi-rs/: Cargo.toml
zenseapi-rs/src/: enums.rs  ffi.rs  lib.rs  structs.rs
zenseapi-sys/: Cargo.toml
zenseapi-sys/src/: enums.rs  lib.rs  raw_funcs.rs  types.rs
zenseapi/src/: enums.rs  lib.rs  structs.rs
