[package]
name = "zense-applications"
version = "0.0.1"
authors = ["Takehiro Matsushima <takehiro.dreamizm@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "zense-open-close"
path = "src/open-close.rs"

[[bin]]
name = "zense-camera-params"
path = "src/camera-params.rs"

[[bin]]
name = "zense-serialnumber"
path = "./src/serialnumber.rs"

[[bin]]
name = "zense-getserial-reset-onfail"
path = "./src/getserial-reset-onfail.rs"

[dependencies]
zenseapi = { path = "../zenseapi" }
rusb = "^0.6"
